# src/api/controllers/tasks.js
@@ -1,5 +1,5 @@
 const { taskServices } = require("../service/tasks")
-const { createTask, findTask, updateTask, deleteTask, taskList } = taskServices;
+const { createTask, findTask, updateTask, deleteTask, taskList, taskSort } = taskServices;
 
 
 /**
@@ -275,6 +275,103 @@ exports.getTasksByUserDueInNext7Days = async (req, res, next) => {
 
         // Return successful response with tasks due in the next 7 days
         return res.status(200).send({ status: true, message: "Get tasks due in the next 7 days successfully", result: taskResult });
+    } catch (error) {
+        // Return error response if an error occurs
+        return res.status(500).send({ status: false, message: error.message });
+    }
+}
+
+/**
+* @swagger
+* /tasks/get-specific-title-tasks-by-user:
+*   post:
+*     summary: Get tasks by user
+*     tags:
+*       - Task Section
+*     description: Get tasks by user
+*     produces:
+*       - application/json
+*     parameters:
+*       - name: token
+*         description: user token
+*         in: header
+*         required: true
+*     requestBody:
+*       required: true
+*       content:
+*         application/json:
+*           schema:
+*             $ref: '#/definitions/taskTitles'
+*     responses:
+*       '200':
+*         description: OK
+*       '401':
+*         description: Unauthorized
+*       '402':
+*         description: Bad Request
+*       '500':
+*         description: Internal Server Error
+*/
+exports.getSpecificTitleTasksByUser = async (req, res, next) => {
+    try {
+        // Query tasks based on specific titles for the logged-in user
+        const taskResult = await taskList({ userId: req.userId, title: { $in: req.body } });
+
+        // Return successful response with tasks based on specific titles
+        return res.status(200).send({ status: true, message: "Get Specific Titles tasks successfully", result: taskResult });
+    } catch (error) {
+        // Return error response if an error occurs
+        return res.status(500).send({ status: false, message: error.message });
+    }
+}
+
+/**
+* @swagger
+* /tasks/get-tasks-by-user-by-sorting:
+*   get:
+*     summary: Get tasks by user
+*     tags:
+*       - Task Section
+*     description: Get tasks by user
+*     produces:
+*       - application/json
+*     parameters:
+*       - name: token
+*         description: user token
+*         in: header
+*         required: true
+*       - name: sortBy
+*         description: Sort By
+*         in: query
+*         required: true
+*         schema:
+*           type: string
+*           enum: 
+*             - ascending
+*             - descending
+*     responses:
+*       '200':
+*         description: OK
+*       '401':
+*         description: Unauthorized
+*       '402':
+*         description: Bad Request
+*       '500':
+*         description: Internal Server Error
+*/
+exports.getTasksByUserBySortingDueDate = async (req, res, next) => {
+    try {
+        // Extract the sortBy parameter from the request query
+        const { sortBy } = req.query;
+
+        // Define the sorting object based on the sortBy parameter
+        const sortObj = sortBy === "ascending" ? { dueDate: 1 } : { dueDate: -1 };
+
+        // Query tasks due within the next 7 days for the logged-in user
+        const taskResult = await taskSort({ userId: req.userId }, sortObj);
+
+        // Return successful response with tasks due in the next 7 days
+        return res.status(200).send({ status: true, message: "Get Sorting Due Date Titles tasks successfully", result: taskResult });
     } catch (error) {
         // Return error response if an error occurs
         return res.status(500).send({ status: false, message: error.message });
